--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
+    "svelte-navigator": "^3.1.5",
     "svelte-preprocess": "^4.0.0",
     "sveltestrap": "^5.9.0",
     "tslib": "^2.0.0",
