--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,8 +1,9 @@
 name: Build and Deploy to Firebase
 run-name: ${{ github.actor }} is building a new version of website 🚀
-on:
+"on":
   push:
-    branches: main
+    branches:
+      - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
